Update index.html add equipe

--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
     .pricing-list li {
       margin-bottom: 4px;
     }
-
+    
     /* FAQ */
 
     .faq {
@@ -900,7 +900,69 @@
           </div>
         </div>
       </section>
+      <!-- ÉQUIPE -->
+      <section id="equipe" class="section">
+        <div class="section-header">
+          <div class="section-kicker">L'équipe</div>
+          <h2 class="section-title">Une conciergerie familiale, experte et accessible</h2>
+          <p class="section-sub">
+            Derrière <strong>Nom de votre conciergerie</strong>, il y a une équipe familiale qui gère
+            déjà ses propres gîtes et locations saisonnières. Nous connaissons vos attentes de
+            propriétaire, comme celles des voyageurs.
+          </p>
+        </div>
 
+        <div class="team-grid">
+          <!-- Carte 1 : Toi -->
+          <article class="team-card">
+            <div class="team-photo-wrapper">
+              <img src="assets/photo-greg.jpg" alt="Photo du co-gérant et responsable optimisation" class="team-photo">
+            </div>
+            <div class="team-body">
+              <h3 class="team-name">Grégory</h3>
+              <p class="team-role">Co-gérant &amp; CTO – Optimisation &amp; stratégie</p>
+              <p class="team-text">
+                En charge de l’optimisation des revenus, des outils digitaux et de l’organisation
+                globale. Je conçois la conciergerie comme un véritable métier, avec des process
+                clairs et des décisions guidées par les chiffres.
+              </p>
+            </div>
+          </article>
+
+          <!-- Carte 2 : Ton frère -->
+          <article class="team-card">
+            <div class="team-photo-wrapper">
+              <img src="assets/photo-seb.jpg" alt="Photo du co-gérant et responsable terrain" class="team-photo">
+            </div>
+            <div class="team-body">
+              <h3 class="team-name">Prénom du frère Nom</h3>
+              <p class="team-role">Co-gérant – Terrain &amp; relation voyageurs</p>
+              <p class="team-text">
+                Présent sur le terrain : gestion des séjours, relation voyageurs, coordination
+                des prestataires, contrôle des logements. Mon rôle : que chaque séjour se
+                déroule sereinement pour les voyageurs comme pour vous.
+              </p>
+            </div>
+          </article>
+
+          <!-- Carte 3 : Ta femme -->
+          <article class="team-card">
+            <div class="team-photo-wrapper">
+              <img src="assets/photo-sophie.jpg" alt="Photo de la gestionnaire de biens" class="team-photo">
+            </div>
+            <div class="team-body">
+              <h3 class="team-name">Prénom de ta femme Nom</h3>
+              <p class="team-role">Gestionnaire de biens – Suivi &amp; coordination</p>
+              <p class="team-text">
+                Je suis le point de contact pour le suivi des séjours, les messages voyageurs,
+                la coordination ménage &amp; linge, et les petits détails qui font la différence
+                dans l’expérience client.
+              </p>
+            </div>
+          </article>
+        </div>
+      </section>
+      
       <!-- FAQ -->
       <section id="faq" class="section">
         <div class="section-header">
