--- a/index.html
+++ b/index.html
@@ -916,7 +916,7 @@
           <!-- Carte 1 : Toi -->
           <article class="team-card">
             <div class="team-photo-wrapper">
-              <img src="assets/photo-greg.jpg" alt="Photo du co-gérant et responsable optimisation" class="team-photo">
+              <img src="assets/photo-greg.jpeg" alt="Photo du co-gérant et responsable optimisation" class="team-photo">
             </div>
             <div class="team-body">
               <h3 class="team-name">Grégory</h3>
@@ -948,7 +948,7 @@
           <!-- Carte 3 : Ta femme -->
           <article class="team-card">
             <div class="team-photo-wrapper">
-              <img src="assets/photo-sophie.jpg" alt="Photo de la gestionnaire de biens" class="team-photo">
+              <img src="assets/photo-sophie.jpeg" alt="Photo de la gestionnaire de biens" class="team-photo">
             </div>
             <div class="team-body">
               <h3 class="team-name">Prénom de ta femme Nom</h3>
