--- a/index.html
+++ b/index.html
@@ -951,7 +951,7 @@
               <img src="assets/photo-sophie.jpeg" alt="Photo de la gestionnaire de biens" class="team-photo">
             </div>
             <div class="team-body">
-              <h3 class="team-name">Prénom de ta femme Nom</h3>
+              <h3 class="team-name">Sophie</h3>
               <p class="team-role">Gestionnaire de biens – Suivi &amp; coordination</p>
               <p class="team-text">
                 Je suis le point de contact pour le suivi des séjours, les messages voyageurs,
