--- a/index.html
+++ b/index.html
@@ -935,7 +935,7 @@
               <img src="assets/photo-seb.jpg" alt="Photo du co-gérant et responsable terrain" class="team-photo">
             </div>
             <div class="team-body">
-              <h3 class="team-name">Prénom du frère Nom</h3>
+              <h3 class="team-name">Sébastien</h3>
               <p class="team-role">Co-gérant – Terrain &amp; relation voyageurs</p>
               <p class="team-text">
                 Présent sur le terrain : gestion des séjours, relation voyageurs, coordination
