--- a/index.html
+++ b/index.html
@@ -863,7 +863,7 @@
               gîtes en location saisonnière : nous savons ce que l’on attend en tant que 
               propriétaire et ce qu’un voyageur exige pour revenir. »
             </p>
-            <div class="quote-author">Nom du gérant</div>
+            <div class="quote-author">Grégory</div>
             <div class="quote-meta">Fondateur – Nom de votre conciergerie</div>
           </div>
         </div>
