Update brand name to 'Conciergerie Val de Loire'

--- a/index.html
+++ b/index.html
@@ -621,8 +621,8 @@
       <div class="brand">
         <div class="brand-mark">C</div>
         <div>
-          <!-- 🔁 REMPLACE "Nom de votre conciergerie" PARTOUT DANS LA PAGE -->
-          <div class="brand-text-title">Nom de votre conciergerie</div>
+          <!-- 🔁 REMPLACE "Conciergerie Val de Loire" PARTOUT DANS LA PAGE -->
+          <div class="brand-text-title">Conciergerie Val de Loire</div>
           <div class="brand-text-sub">Val de Loire & Atlantique</div>
         </div>
       </div>
@@ -647,7 +647,7 @@
             pour vos locations en Val de Loire & Atlantique.
           </h1>
           <p class="hero-sub">
-            <strong>Nom de votre conciergerie</strong> accompagne les propriétaires de gîtes, maisons 
+            <strong>Conciergerie Val de Loire</strong> accompagne les propriétaires de gîtes, maisons 
             et appartements en <strong>location saisonnière</strong> ou <strong>LMNP</strong> : 
             annonces, voyageurs, ménage, linge, optimisation des revenus 
             à Nantes, sur la côte Atlantique et en Val de Loire.
