--- a/index.html
+++ b/index.html
@@ -630,6 +630,7 @@
         <a href="#services">Services</a>
         <a href="#zones">Zones</a>
         <a href="#tarifs">Tarifs</a>
+        <a href="#equipe">Equipe</a>
         <a href="#faq">FAQ</a>
       </nav>
       <button class="btn btn-primary" onclick="document.getElementById('contact').scrollIntoView({behavior:'smooth'})">
