--- a/index.html
+++ b/index.html
@@ -509,6 +509,66 @@
     .pricing-list li {
       margin-bottom: 4px;
     }
+
+    /* ÉQUIPE */
+
+    .team-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
+      gap: 16px;
+    }
+
+    .team-card {
+      background: #ffffff;
+      border-radius: var(--radius-lg);
+      box-shadow: 0 12px 28px rgba(15, 23, 42, 0.10);
+      border: 1px solid rgba(148, 163, 184, 0.45);
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .team-photo-wrapper {
+      position: relative;
+      padding: 10px 10px 0 10px;
+    }
+
+    .team-photo {
+      width: 100%;
+      border-radius: 14px;
+      object-fit: cover;
+      aspect-ratio: 4 / 3;
+      display: block;
+    }
+
+    .team-body {
+      padding: 10px 12px 14px;
+      font-size: 13px;
+    }
+
+    .team-name {
+      font-size: 15px;
+      font-weight: 600;
+      margin-bottom: 2px;
+    }
+
+    .team-role {
+      font-size: 12px;
+      color: var(--muted);
+      margin-bottom: 6px;
+    }
+
+    .team-text {
+      font-size: 13px;
+      color: var(--muted);
+    }
+
+    @media (max-width: 800px) {
+      .team-grid {
+        grid-template-columns: minmax(0, 1fr);
+      }
+    }
+
     
     /* FAQ */
 
