Update image source for Sébastien's photo

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <p>Co-gérant & optimisation. Automatisation, gestion, stratégie.</p>
     </div>
     <div class="card">
-      <img src="assets/photo-seb.jpeg" class="team-photo" />
+      <img src="assets/photo-seb.jpg" class="team-photo" />
       <h3>Sébastien</h3>
       <p>Co-gérant & terrain. Relation voyageurs, contrôle qualité.</p>
     </div>
