Update team member photos with new image paths

--- a/index.html
+++ b/index.html
@@ -592,21 +592,21 @@
       <div class="team-grid">
         <div class="team-card">
           <div class="team-photo">
-            <img src="assets/team-sophie.jpg" alt="Sophie">
+            <img src="assets/photo-sophie.jepg" alt="Sophie">
           </div>
           <div class="team-name">Sophie</div>
           <div class="team-role">Gestion des biens & relation propriétaires</div>
         </div>
         <div class="team-card">
           <div class="team-photo">
-            <img src="assets/team-seb.jpg" alt="Sébastien">
+            <img src="assets/photo-seb.jpg" alt="Sébastien">
           </div>
           <div class="team-name">Sébastien</div>
           <div class="team-role">Terrain, accueil voyageurs & qualité</div>
         </div>
         <div class="team-card">
           <div class="team-photo">
-            <img src="assets/team-greg.jpg" alt="Grégory">
+            <img src="assets/photo-greg.jepg" alt="Grégory">
           </div>
           <div class="team-name">Grégory</div>
           <div class="team-role">Optimisation, automatisation & stratégie</div>
